[package]
name = "madeiranobre"
version = "0.1.0"
authors = ["Takasakiii <lucasmc2709@live.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "^0.2.63"
console_error_panic_hook = { version = "^0.1.6", optional = true }
wee_alloc = { version = "^0.4.5", optional = true }
yew = "^0.18.0"
yew-router = "^0.15.0"
web-sys = { version = "^0.3.51", features = ["Window", "Document", "Element", "DocumentFragment", "Location"] }
serde = { version = "^1.0.126", features = ["derive"] }
serde_json = "^1.0.64"
reqwest = "^0.11.3"
wasm-bindgen-futures = "^0.4.24"
lazy_static = "^1.4.0"

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
